Changed the degree jpg

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                                   </div>
                                 </div>
                                 <div class="trm-mb-20"><b>Coursework:</b> Data Structures and Algorithms, Discrete Mathematics, Advanced Java Programming, Object Oriented Programming, Software Engineering, Computer Architecture, Web Technologies, Computer Networks, Microprocessors and Interface, DBMS, Java.</div>
-                                <a data-fancybox href="files/diploma.jpg" class="trm-label trm-label-color">Diploma <i class="fas fa-arrow-right"></i></a>
+                                <a data-fancybox href="files/Bachelor.jpg" class="trm-label trm-label-color">Degree <i class="fas fa-arrow-right"></i></a>
                               </div>
                             </div>
 
