Updated typing text

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <a href="#resume-triger" data-scroll-to="#resume-triger" data-scroll-offset="-130">Projects</a>
                       </li>
                       <li id="contact-link">
-                        <a href="#contact-triger" data-scroll-to="#contact-triger" data-scroll-offset="-130">Contact</a>
+                        <a href="#contact-triger" data-scroll-to="#contact-triger" data-scroll-offset="-130">Connect</a>
                       </li>
                     </ul>
                   </nav>
@@ -178,12 +178,11 @@
                           <div class="trm-dot"></div>
                         </div>
                         <h1 class="trm-name trm-mb-15">Sameer Amesara</h1>
-                        <!--<div class="trm-label">I`m
+                        <div class="trm-label">I`m
                           <span class="trm-typed-text">
-                            <!-- Words for rotation: js/main.js line 34 
+                            <!-- Words for rotation: js/main.js line 34-->
                           </span>
-                        </div>-->
-                        <div class="trm-label">Big Data Engineer</div>
+                        </div>
                       </div>
                       <!-- card header end -->
 
@@ -570,37 +569,16 @@
                       <div class="col-lg-12">
 
                         <!-- title -->
-                        <h5 class="trm-mb-40 trm-title-with-divider">Contact <span data-number="07"></span></h5>
+                        <h5 class="trm-mb-40 trm-title-with-divider">Let's Connect <span data-number="07"></span></h5>
 
                       </div>
-                      <div class="col-lg-6">
+
+                      <div class="col-lg-12">
 
                         <!-- contact card -->
                         <div class="trm-service-icon-box trm-scroll-animation" data-scroll data-scroll-offset="40">
                           <div class="trm-service-content">
-                            <div class="trm-icon">
-                              <img src="img/icons/icon-5.svg" alt="icon" class="trm-black-icon">
-                              <img src="img/icons/icon-5w.svg" alt="icon" class="trm-white-icon">
-                            </div>
-                            <h6 class="trm-mb-20">Call</h6>
-                            <div class="trm-mb-15"><span class="trm-label">Work:</span> <span class="trm-text-sm">+91 81605 42972</span></div>
-                            <!--<div><span class="trm-label">Personal:</span> <span class="trm-text-sm">+29 (044) 293 37 28</span></div>-->
-                          </div>
-                        </div>
-                        <!-- contact card end -->
-
-                      </div>
-                      <div class="col-lg-6">
-
-                        <!-- contact card -->
-                        <div class="trm-service-icon-box trm-scroll-animation" data-scroll data-scroll-offset="40">
-                          <div class="trm-service-content">
-                            <div class="trm-icon">
-                              <img src="img/icons/icon-6.svg" alt="icon" class="trm-black-icon">
-                              <img src="img/icons/icon-6w.svg" alt="icon" class="trm-white-icon">
-                            </div>
-                            <h6 class="trm-mb-20">Write to me</h6>
-                            <div class="trm-mb-15"><span class="trm-label">E-mail:</span> <span class="trm-text-sm">ame.sam288@gmail.com</span></div>
+                            <div class="trm-mb-20">Hello there! I appreciate you taking the time to look at my online portfolio. Please don't be hesitant to get in touch if you're interested in working together. I'm available to talk about prospective projects and respond to any inquiries you might have. I'm always eager to meet new individuals and investigate new possibilities. I'm sure we can create something fantastic together!</div>
                           </div>
                         </div>
                         <!-- contact card end -->
