Updated About Section and changed link for Leet code.

--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
 
                       <!-- sidebar social -->
                       <div class="trm-social">
-                        <a href="https://www.linkedin.com/in/sameer-amesara-9106861a1/" target="_blank"><i class="fab fa-linkedin-in fa-2x"></i></a>
+                        <a href="https://www.linkedin.com/in/sameeramesara/" target="_blank"><i class="fab fa-linkedin-in fa-2x"></i></a>
                         <a href="https://www.instagram.com/stac_overflow/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
                         <a href="https://github.com/SameerAmesara" target="_blank"><i class="fab fa-github fa-2x"></i></a>
-                        <a href="https://leetcode.com/Sameer2899/" target="_blank"><i class="fas fa-code fa-2x"></i></i></a>
+                        <a href="https://leetcode.com/stac_overflow/" target="_blank"><i class="fas fa-code fa-2x"></i></i></a>
                         <a href="mailto:ame.sam288@gmail.com" target="_blank"><i class="fab fa-google fa-2x"></i></a>
                       </div>
                       <!-- sidebar social end -->
@@ -287,7 +287,7 @@
                         <h5 class="trm-mb-40 trm-title-with-divider">My story <span data-number="01"></span></h5>
 
                         <!-- quote -->
-                        <blockquote class="trm-scroll-animation" data-scroll data-scroll-offset="40">Hello! I am a software developer. My job involves writing code to create applications and programs. I'm passionate about writing software that is accessible and easy to use. My goal is to develop reliable and secure software solutions that people can trust.<br><br>I am currently working as a Big Data Engineer at Tata Consultancy Services. I have interned as a Software Developer and have been working as a Big data Engineer for 1.5 years.</blockquote>
+                        <blockquote class="trm-scroll-animation" data-scroll data-scroll-offset="40">I'm Sameer Amesara, a passionate computer engineer with two years of experience in Data Engineering. I leverage my expertise in Java, SQL, and Big Data technologies like Spark/Scala and Hadoop to ensure seamless data flow and enable effective data analysis. I take pride in optimizing data infrastructure to deliver top-notch performance and reliability. One of my standout qualities is my exceptional communication skills. I can effectively collaborate with cross-functional teams, bridging the gap between technical and non-technical stakeholders.<br><br>Beyond my professional life, I find inspiration in music and mountains. Music fuels my creativity and enhances my problem-solving abilities, bringing a unique perspective to my engineering work. I also have a deep appreciation for the beauty of mountains and the tranquility of nature. It helps me maintain balance and focus, which translates into my approach to solving complex problems.<br><br>I am currently working as a Big Data Engineer at Tata Consultancy Services.</blockquote>
                         <!-- quote end -->
 
                       </div>
