Updated the Work Experience and Resume

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                                   <div class="trm-left-side">
                                     <h5 class="trm-mb-15">Systems Engineer</h5>
                                     <h6> Tata Consultancy Services </h6>
-                                    <div class="trm-text-sm trm-accent-color trm-mb-15">July 2021 - Present</div>
+                                    <div class="trm-text-sm trm-accent-color trm-mb-15">July 2021 - July 2023</div>
                                   </div>
                                 </div>
                                 <div>Currently working as a Big Data Engineer and using technologies like Big Data, Hadoop, Scala, Spark, Hive and Java.<br>
