--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                       <div class="col-lg-12">
                         <div class="trm-service-icon-box trm-scroll-animation" data-scroll data-scroll-offset="40">
                           <div class="trm-service-content">
-                            <h5 class="trm-mb-20">Stock Price Prediction Using Sentimental Analysis on News Headlines</h6>
+                            <h6 class="trm-mb-20">Stock Price Prediction Using Sentimental Analysis on News Headlines</h6>
                             <h6>ICT with Intelligent Applications Proceedings of ICTIS 2022, Volume 1</h6>
                             <div class="trm-text-sm trm-accent-color trm-mb-15">April - 2022</div>
                             <div class="trm-mb-20">Evaluated and compared various deep learning algorithms such as Long-Short Term Memory (LSTM) and Complex Neural Networks (CNN) for estimating stock prices with and without sentiment analysis.</div>
@@ -590,8 +590,6 @@
                     <!-- contact form 
                     <div class="row">
                       <div class="col-lg-12">
-
-                        <!-- title 
                         <h5 class="trm-mb-40 trm-title-with-divider">Get in touch <span data-number="08"></span></h5>
 
                       </div>
@@ -611,7 +609,7 @@
 
                       </div>
                     </div>
-                    <!-- contact form end 
+                    contact form end
                   </div>
                   <!-- content end -->
 
