Updated details about Dalhousie and added Interest Section

--- a/index.html
+++ b/index.html
@@ -16,16 +16,14 @@
   <!-- font awesome css -->
   <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
   <!-- trueman light mode css -->
-  <link rel="stylesheet" href="css/style-light.css" id="trm-switch-style">
+  <link rel="stylesheet" href="css/style-dark.css" id="trm-switch-style">
   <!-- page name -->
   <title>Sameer Amesara</title>
 </head>
 
 <body>
-
   <!-- app wrapper -->
   <div class="trm-app-frame">
-
     <!-- page preloader -->
     <div class="trm-preloader">
       <div class="trm-holder">
@@ -48,9 +46,9 @@
     <!-- change mode preloader -->
     <div class="trm-mode-swich-animation-frame">
       <div class="trm-mode-swich-animation">
-        <i class="far fa-sun"></i>
-        <div class="trm-horizon"></div>
         <i class="far fa-moon"></i>
+        <div class="trm-horizon"></div>
+        <i class="far fa-sun"></i>
       </div>
     </div>
     <!-- change mode preloader end -->
@@ -59,9 +57,7 @@
     <div id="trm-dynamic-content" class="trm-swup-animation">
       <div id="trm-scroll-container" class="trm-scroll-container" data-scroll-container style="opacity: 0">
         <div data-scroll-section id="content" class="trm-scroll-section">
-
           <div data-scroll data-scroll-repeat id="home-triger"></div>
-
           <!-- top bar -->
           <div class="trm-top-bar" data-scroll data-scroll-sticky data-scroll-target="#content" data-scroll-offset="-10">
             <div class="container">
@@ -74,7 +70,6 @@
                 <!-- logo end -->
               </div>
               <div class="trm-right-side">
-
                 <!-- menu -->
                 <div class="trm-menu">
                   <nav>
@@ -92,7 +87,7 @@
                         <a href="#resume-triger" data-scroll-to="#resume-triger" data-scroll-offset="-130">Projects</a>
                       </li>
                       <li id="contact-link">
-                        <a href="#contact-triger" data-scroll-to="#contact-triger" data-scroll-offset="-130">Connect</a>
+                        <a href="#contact-triger" data-scroll-to="#contact-triger" data-scroll-offset="-130">Interests</a>
                       </li>
                     </ul>
                   </nav>
@@ -113,7 +108,6 @@
           <!-- top bar end -->
 
           <div class="trm-content-start">
-
             <!-- banner -->
             <div class="trm-banner" data-scroll data-scroll-direction="vertical" data-scroll-speed="-1">
               <div class="swiper-container trm-slideshow" data-scroll data-scroll-direction="vertical" data-scroll-speed="-4">
@@ -193,7 +187,7 @@
                         <a href="https://www.linkedin.com/in/sameeramesara/" target="_blank"><i class="fab fa-linkedin-in fa-2x"></i></a>
                         <a href="https://www.instagram.com/stac_overflow/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
                         <a href="https://github.com/SameerAmesara" target="_blank"><i class="fab fa-github fa-2x"></i></a>
-                        <a href="https://leetcode.com/stac_overflow/" target="_blank"><i class="fas fa-code fa-2x"></i></i></a>
+                        <a href="https://leetcode.com/stac_overflow/" target="_blank"><i class="fas fa-code fa-2x"></i></a>
                         <a href="mailto:ame.sam288@gmail.com" target="_blank"><i class="fab fa-google fa-2x"></i></a>
                       </div>
                       <!-- sidebar social end -->
@@ -205,28 +199,22 @@
                         <!-- country -->
                         <li>
                           <div class="trm-label">Residence:</div>
-                          <div class="trm-label trm-label-light">India</div>
+                          <div class="trm-label trm-label-light">Canada</div>
                         </li>
                         <!-- city -->
                         <li>
                           <div class="trm-label">City:</div>
-                          <div class="trm-label trm-label-light">Vadodara</div>
+                          <div class="trm-label trm-label-light">Halifax, NS</div>
                         </li>
                         <!-- age -->
                         <li>
                           <div class="trm-label">Age:</div>
-                          <div class="trm-label trm-label-light">23</div>
+                          <div class="trm-label trm-label-light">24</div>
                         </li>
                       </ul>
                       <!-- info end -->
 
                       <div class="trm-divider trm-mb-40 trm-mt-40"></div>
-
-                      <!-- action button
-                      <div class="text-center">
-                        <a data-fancybox href="#trm-order" class="trm-btn">Contact me <i class="far fa-envelope"></i></a>
-                      </div>
-                      <!-- action button end -->
 
                     </div>
                   </div>
@@ -287,7 +275,7 @@
                         <h5 class="trm-mb-40 trm-title-with-divider">My story <span data-number="01"></span></h5>
 
                         <!-- quote -->
-                        <blockquote class="trm-scroll-animation" data-scroll data-scroll-offset="40">I'm Sameer Amesara, a passionate computer engineer with two years of experience in Data Engineering. I leverage my expertise in Java, SQL, and Big Data technologies like Spark/Scala and Hadoop to ensure seamless data flow and enable effective data analysis. I take pride in optimizing data infrastructure to deliver top-notch performance and reliability. One of my standout qualities is my exceptional communication skills. I can effectively collaborate with cross-functional teams, bridging the gap between technical and non-technical stakeholders.<br><br>Beyond my professional life, I find inspiration in music and mountains. Music fuels my creativity and enhances my problem-solving abilities, bringing a unique perspective to my engineering work. I also have a deep appreciation for the beauty of mountains and the tranquility of nature. It helps me maintain balance and focus, which translates into my approach to solving complex problems.<br><br>I am currently working as a Big Data Engineer at Tata Consultancy Services.</blockquote>
+                        <blockquote class="trm-scroll-animation" data-scroll data-scroll-offset="40" align = "justify">I'm Sameer Amesara, a passionate computer engineer with two years of experience in Data Engineering. I leverage my expertise in Java, SQL, and Big Data technologies like Spark/Scala and Hadoop to ensure seamless data flow and enable effective data analysis. I take pride in optimizing data infrastructure to deliver top-notch performance and reliability. One of my standout qualities is my exceptional communication skills. I can effectively collaborate with cross-functional teams, bridging the gap between technical and non-technical stakeholders.<br><br>Currently, I am a Full-Time Graduate Student at Dalhousie University in Halifax (NS), Canada. I am majoring in Applied Computer Science. </blockquote>
                         <!-- quote end -->
 
                       </div>
@@ -301,8 +289,6 @@
 
                           <!-- timeline -->
                           <div class="trm-timeline">
-                            <!-- DALHOUSIE UNIVERSITY
-
                             <div class="trm-timeline-item trm-scroll-animation" data-scroll data-scroll-offset="40">
                               <div class="trm-timeline-mark-light"></div>
                               <div class="trm-timeline-mark"></div>
@@ -310,15 +296,14 @@
                                 <div class="trm-card-header">
                                   <div class="trm-left-side"><h5 class="trm-mb-15">Dalhousie University - Halifax, Nova Scotia, Canada</h5>
                                     
-                                    <h6> Masters : Applied Computer Science : GPA:  </h6>
+                                    <h6> Masters : Applied Computer Science</h6>
                                     <div class="trm-text-sm trm-accent-color trm-mb-15">Sept 2023 - Jan 2025</div>
                                   </div>
                                 </div>
-                                <div class="trm-mb-20">Dolorum tempora provident rerum aut hic quasi placeat iure tempora timeline de laudantium ipsa ad debitis unde quasi placeat Iste voluptatibus minus veritatis qui ut.</div>
-                                <a data-fancybox href="files/diploma.jpg" class="trm-label trm-label-color">Diploma <i class="fas fa-arrow-right"></i></a>
+                                <div class="trm-mb-20"><b>Coursework:</b> Communication Skills, Advanced Software Development, Data Warehousing, Data Management, Data Analytics, Advanced Web Development, Cloud Computing, Serverless Data Processing, Mobile Computing.</div>
+<!--                                <a data-fancybox href="files/diploma.jpg" class="trm-label trm-label-color">Diploma <i class="fas fa-arrow-right"></i></a>-->
                               </div>
                             </div>
-                          -->
 
                             <div class="trm-timeline-item trm-scroll-animation" data-scroll data-scroll-offset="40">
                               <div class="trm-timeline-mark-light"></div>
@@ -327,7 +312,7 @@
                                 <div class="trm-card-header">
                                   <div class="trm-left-side">
                                     <h5 class="trm-mb-15">Maharaja Sayajirao University - Vadodara, Gujarat, India </h5>
-                                    <h6> Bachelors of Engineering : Computer Science : GPA: 9.04/10 </h6>
+                                    <h6> Bachelors of Engineering : Computer Science : GPA : 9.04/10 </h6>
                                     <div class="trm-text-sm trm-accent-color trm-mb-15">July 2017 - May 2021</div>
                                   </div>
                                 </div>
@@ -360,7 +345,7 @@
                                     <div class="trm-text-sm trm-accent-color trm-mb-15">July 2021 - July 2023</div>
                                   </div>
                                 </div>
-                                <div>Currently working as a Big Data Engineer and using technologies like Big Data, Hadoop, Scala, Spark, Hive and Java.<br>
+                                <div>Worked as a Big Data Engineer and used technologies like Big Data, Hadoop, Scala, Spark, Hive and Java.<br><br>Responsibilities:<br>
                                   <ul>
                                     <li>Analyzing, organizing & combining raw data from different sources.</li>
                                     <li>Hands-on Experience with building Spark/Python based Data Pipelines.</li>
@@ -567,85 +552,53 @@
                     <!-- contact -->
                     <div class="row">
                       <div class="col-lg-12">
-
                         <!-- title -->
-                        <h5 class="trm-mb-40 trm-title-with-divider">Let's Connect <span data-number="07"></span></h5>
-
+                        <h5 class="trm-mb-40 trm-title-with-divider">My Interests <span data-number="07"></span></h5>
                       </div>
 
                       <div class="col-lg-12">
-
+                        <div class="trm-skill-card trm-scroll-animation" data-scroll data-scroll-offset="40" align = "justify">
+                          I invest a significant chunk of my free time diving into the newest tech developments within web development. My hands-on experience spans across diverse projects built on various frameworks. As an enthusiastic learner, my passion for programming 💻 goes hand in hand with my eagerness to unravel the intricacies of different applications and technologies.
+                          <br><br>
+                          Beyond my professional life, I like music, mountains and gaming. Music ignites creativity, mountains instill determination, and gaming sharpens strategic thinking. These passions enrich my problem-solving skills, emphasizing that life's challenges are surmounted one step at a time. They're the symphony of my inspiration, on and off the clock.🎵🏔️🎮💡
+                          <br><br><br>
+                            <div class="col-lg-12" align = "center">
+                              <ul class="list-inline">
+                                <li class="list-inline-item skill-3">
+                                  <img src="img/gifs/mountains.gif" width="75px" height="75px" style="border-radius: 10px;"/>
+                                </li>
+                                <li class="list-inline-item skill-3">
+                                  <img src="img/gifs/hiking.gif" width="75px" height="75px" style="border-radius: 10px;"/>
+                                </li>
+                                <li class="list-inline-item skill-3">
+                                  <img src="img/gifs/music.gif" width="75px" height="75px" style="border-radius: 10px;"/>
+                                </li>
+                                <li class="list-inline-item skill-3">
+                                  <img src="img/gifs/gaming.gif" width="75px" height="75px" style="border-radius: 10px;"/>
+                                </li>
+                                <li class="list-inline-item skill-3">
+                                  <img src="img/gifs/food.gif" width="75px" height="75px" style="border-radius: 10px;"/>
+                                </li>
+                                <li class="list-inline-item skill-3">
+                                  <img src="img/gifs/cricket.gif" width="75px" height="75px" style="border-radius: 10px;"/>
+                                </li>
+                              </ul>
+                            </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-12">
                         <!-- contact card -->
                         <div class="trm-service-icon-box trm-scroll-animation" data-scroll data-scroll-offset="40">
                           <div class="trm-service-content">
-                            <div class="trm-mb-20">Hello there! I appreciate you taking the time to look at my online portfolio. Please don't be hesitant to get in touch if you're interested in working together. I'm available to talk about prospective projects and respond to any inquiries you might have. I'm always eager to meet new individuals and investigate new possibilities. I'm sure we can create something fantastic together!</div>
+                            <div class="trm-mb-10">Thank you for visiting my online portfolio. Feel free to reach out if you're interested in collaborating. I'm open to discussing projects and answering any questions you have. Let's explore new opportunities and create something amazing together!</div>
                           </div>
                         </div>
-                        <!-- contact card end -->
-
                       </div>
                     </div>
-                    <!-- contact end -->
-
-                    <!-- contact form 
-                    <div class="row">
-                      <div class="col-lg-12">
-                        <h5 class="trm-mb-40 trm-title-with-divider">Get in touch <span data-number="08"></span></h5>
-
-                      </div>
-                      <div class="col-lg-12">
-
-                        <div class="trm-contact-card">
-                          <form>
-                            <input type="text" placeholder="Name">
-                            <input type="email" placeholder="Email">
-                            <textarea rows="6" placeholder="Message"></textarea>
-                            <div class="trm-form-bottom">
-                              <button type="submit" class="trm-btn">Send <i class="fas fa-arrow-right"></i></button>
-                              <div class="trm-text-sm">* I promise the confidentiality of your personal information</div>
-                            </div>
-                          </form>
-                        </div>
-
-                      </div>
-                    </div>
-                    contact form end
-                  </div>
-                  <!-- content end -->
-
-                  <!-- popup -->
-                  <div id="trm-order" class="trm-order">
-                    <div class="trm-popup-content">
-
-                      <img src="img/popup-1.jpg" alt="photo">
-
-                      <div class="trm-popup-form-frame">
-                        <h5 class="trm-mb-40">Write me a message</h5>
-                        <form id="form1">
-                          <input name="name" type="text" placeholder="Name">
-                          <input name="email" type="email" placeholder="Email">
-                          <textarea name="text" rows="6" placeholder="Message"></textarea>
-                          <button type="submit" class="trm-btn">Send <i class="fas fa-arrow-right"></i></button>
-                        </form>
-                        <div class="trm-text-sm trm-mt-20">* I promise the confidentiality of your personal information</div>
-                        <div class="trm-success-banner">
-                          <img src="img/success.png" alt="success" class="trm-mb-15">
-                          <h4 class="trm-mb-15">Success</h4>
-                          <div class="trm-text trm-mb-20">Your message has been sent successfully</div>
-                          <a href="#." class="trm-btn" data-fancybox-close="">Ok</a>
-                        </div>
-                      </div>
-
-                    </div>
-                  </div>
-                  <!-- popup end -->
-
                 </div>
               </div>
             </div>
-
           </div>
-
         </div>
       </div>
     </div>
@@ -654,31 +607,28 @@
     <!-- mode switcher -->
     <div class="trm-hidden-switcher">
       <div class="trm-mode-switcher">
-        <i class="far fa-sun"></i>
+        <i class="far fa-moon"></i>
         <input class="tgl tgl-light" id="trm-swich" type="checkbox">
         <label class="trm-swich" for="trm-swich"></label>
-        <i class="far fa-moon"></i>
+        <i class="far fa-sun"></i>
       </div>
     </div>
     <!-- mode switcher end -->
-
   </div>
-  <!-- app wrapper end -->
-
-  <!-- jquery js -->
-  <script src="js/plugins/jquery.min.js"></script>
-  <!-- swup js -->
-  <script src="js/plugins/swup.min.js"></script>
-  <!-- locomotive scroll js -->
-  <script src="js/plugins/locomotive-scroll.js"></script>
-  <!-- typing js -->
-  <script src="js/plugins/typing.js"></script>
-  <!-- fancybox js -->
-  <script src="js/plugins/fancybox.min.js"></script>
-  <!-- swiper js -->
-  <script src="js/plugins/swiper.min.js"></script>
-  <!-- trueman js -->
-  <script src="js/main.js"></script>
-
+    <!-- jquery js -->
+    <script src="js/plugins/jquery.min.js"></script>
+    <!-- swup js -->
+    <script src="js/plugins/swup.min.js"></script>
+    <!-- locomotive scroll js -->
+    <script src="js/plugins/locomotive-scroll.js"></script>
+    <!-- typing js -->
+    <script src="js/plugins/typing.js"></script>
+    <!-- fancybox js -->
+    <script src="js/plugins/fancybox.min.js"></script>
+    <!-- swiper js -->
+    <script src="js/plugins/swiper.min.js"></script>
+    <!-- trueman js -->
+    <script src="js/main.js"></script>
+  </div>
 </body>
 </html>
