updated index.html with new Resume

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <!-- mode switcher place end -->
 
                 <!-- action button -->
-                <a href="files/Sameer_Resume.pdf" download class="trm-btn trm-btn-sm" target="_blank">Download cv <i class="fas fa-arrow-down"></i></a>
+                <a href="files/Sameer_Amesara_Resume.pdf" download class="trm-btn trm-btn-sm" target="_blank">Download cv <i class="fas fa-arrow-down"></i></a>
                 <!-- action button end -->
               </div>
               <div class="trm-menu-btn"><span></span></div>
